force-app/main/default/objects/Application__c/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <label>Loan ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>