force-app/main/default/objects/Application__c/fields/Loan_Purpose_1__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_1__c</fullName>
    <label>Loan Purpose 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>