force-app/main/default/objects/Application__c/fields/Loan_Purpose_2__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_2__c</fullName>
    <label>Loan Purpose 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>