force-app/main/default/objects/Application__c/fields/LTV_PC__c.field-meta.xml
<CustomField>
    <fullName>LTV_PC__c</fullName>
    <label>LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>