force-app/main/default/objects/Application__c/fields/Mandate_Req_ID__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Req_ID__c</fullName>
    <label>Mandate Req ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>