force-app/main/default/objects/Application__c/fields/Margin_ROI__c.field-meta.xml
<CustomField>
    <fullName>Margin_ROI__c</fullName>
    <label>Margin ROI(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>