force-app/main/default/objects/Application__c/fields/MODT_Schedule__c.field-meta.xml
<CustomField>
    <fullName>MODT_Schedule__c</fullName>
    <label>MODT Schedule</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>