force-app/main/default/objects/Application__c/fields/MODT_Template__c.field-meta.xml
<CustomField>
    <fullName>MODT_Template__c</fullName>
    <label>MODT Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Additional Loan</fullName>
            </value>
            <value>
                <fullName>Mortgagor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>