force-app/main/default/objects/Application__c/fields/MODT_to_be_done_in_name_of__c.field-meta.xml
<CustomField>
    <fullName>MODT_to_be_done_in_name_of__c</fullName>
    <label>MODT To Be Done In Name Of</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>