force-app/main/default/objects/Application__c/fields/Mortgage_property_after_tranche2__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_after_tranche2__c</fullName>
    <label>Mortgage Property After Tranche2(₹)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>