force-app/main/default/objects/Application__c/fields/Mortgage_property_Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_property_Collateral_Value__c</fullName>
    <label>Mortgage property Collateral Value(₹)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>