force-app/main/default/objects/Application__c/fields/Nach_Party_2__c.field-meta.xml
<CustomField>
    <fullName>Nach_Party_2__c</fullName>
    <label>Nach Party 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>