force-app/main/default/objects/Application__c/fields/NACH_Party_2_ID__c.field-meta.xml
<CustomField>
    <fullName>NACH_Party_2_ID__c</fullName>
    <label>NACH Party 2 ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>