force-app/main/default/objects/Application__c/fields/Nach_Party__c.field-meta.xml
<CustomField>
    <fullName>Nach_Party__c</fullName>
    <label>Nach Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>