force-app/main/default/objects/Application__c/fields/Nature_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Property__c</fullName>
    <label>Nature Of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Many</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>