force-app/main/default/objects/Application__c/fields/Neighbour_feedback__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_feedback__c</fullName>
    <label>Neighbour Feedback</label>
    <length>50</length>
    <type>Text</type>
</CustomField>