force-app/main/default/objects/Application__c/fields/Nominee__c.field-meta.xml
<CustomField>
    <fullName>Nominee__c</fullName>
    <label>Nominee Party Part Of Agmt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>