force-app/main/default/objects/Application__c/fields/Nominee_Party__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Party__c</fullName>
    <label>Nominee Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>