force-app/main/default/objects/Application__c/fields/Number_of_advance_EMI__c.field-meta.xml
<CustomField>
    <fullName>Number_of_advance_EMI__c</fullName>
    <label>Number Of Advance EMI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>