force-app/main/default/objects/Application__c/fields/Old_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Application_Number__c</fullName>
    <label>Old Application Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>