force-app/main/default/objects/Application__c/fields/Old_Collateral_value__c.field-meta.xml
<CustomField>
    <fullName>Old_Collateral_value__c</fullName>
    <label>Old Collateral value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>