force-app/main/default/objects/Application__c/fields/Old_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Old_Loan_Amount__c</fullName>
    <label>Old Loan Amount</label>
    <length>7</length>
    <type>Text</type>
</CustomField>