force-app/main/default/objects/Application__c/fields/Old_Loan_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Old_Loan_Net_Income__c</fullName>
    <label>Old Loan Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>