force-app/main/default/objects/Application__c/fields/Old_loan_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Old_loan_Obligations__c</fullName>
    <label>Old loan Obligations</label>
    <length>80</length>
    <type>Text</type>
</CustomField>