force-app/main/default/objects/Application__c/fields/Old_Loan_Obligationss__c.field-meta.xml
<CustomField>
    <fullName>Old_Loan_Obligationss__c</fullName>
    <label>Old Loan Obligations</label>
    <length>80</length>
    <type>Text</type>
</CustomField>