force-app/main/default/objects/Application__c/fields/Old_Loan_Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Loan_Sanction_Date__c</fullName>
    <label>Old Loan Sanction Date</label>
    <type>Date</type>
</CustomField>