force-app/main/default/objects/Application__c/fields/Old_MODT_Document_No__c.field-meta.xml
<CustomField>
    <fullName>Old_MODT_Document_No__c</fullName>
    <label>Old MODT Document No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>