force-app/main/default/objects/Application__c/fields/Old_Mortgage_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Mortgage_Date__c</fullName>
    <label>Old Mortgage Date</label>
    <type>Date</type>
</CustomField>