force-app/main/default/objects/Application__c/fields/PC_Decision__c.field-meta.xml
<CustomField>
    <fullName>PC_Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>