force-app/main/default/objects/Application__c/fields/PC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>PC_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>