force-app/main/default/objects/Application__c/fields/PC_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Submission_Date__c</fullName>
    <label>PC Submission Date</label>
    <type>Date</type>
</CustomField>