force-app/main/default/objects/Application__c/fields/PC_Submisson_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Submisson_Date__c</fullName>
    <label>PC Submisson Date</label>
    <type>Date</type>
</CustomField>