force-app/main/default/objects/Application__c/fields/Pre_Login__c.field-meta.xml
<CustomField>
    <fullName>Pre_Login__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Login</label>
    <referenceTo>Pre_Login__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>