force-app/main/default/objects/Application__c/fields/Previous_Owner_PC__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_PC__c</fullName>
    <description>Holds the owner when stage is equal to PC</description>
    <label>Owner (PC)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>