force-app/main/default/objects/Application__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>