force-app/main/default/objects/Application__c/fields/Property_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Property_Schedule__c</fullName>
    <label>Property Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>