force-app/main/default/objects/Application__c/fields/Reason_for_change_in_collateral_value__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_change_in_collateral_value__c</fullName>
    <label>Reason For Change In Collateral Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>