force-app/main/default/objects/Application__c/fields/Reason_for_change_in_net_income__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_change_in_net_income__c</fullName>
    <label>Reason for change in net income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Income</fullName>
            </value>
            <value>
                <fullName>Reduction in obligations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>