force-app/main/default/objects/Application__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <label>Recommended Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>