force-app/main/default/objects/Application__c/fields/Recommended_AC_User__c.field-meta.xml
<CustomField>
    <fullName>Recommended_AC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended AC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>