force-app/main/default/objects/Application__c/fields/Refered_By_Customer_Loan_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Refered_By_Customer_Loan_Account_No__c</fullName>
    <label>Refered By Customer Loan Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>