force-app/main/default/objects/Application__c/fields/Refered_By_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Refered_By_Existing_Customer__c</fullName>
    <label>Refered By Existing Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>