force-app/main/default/objects/Application__c/fields/Refered_By_Introducer_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Refered_By_Introducer_Broker_Name__c</fullName>
    <label>Refered By Introducer / Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>