force-app/main/default/objects/Application__c/fields/Registration_District__c.field-meta.xml
<CustomField>
    <fullName>Registration_District__c</fullName>
    <label>Registration District</label>
    <length>30</length>
    <type>Text</type>
</CustomField>