force-app/main/default/objects/Application__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <formula>IF(OR(ISPICKVAL( application_status__c , &apos;Rejected&apos; ),ISPICKVAL( application_status__c , &apos;Cancelled&apos; )),TODAY(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>