force-app/main/default/objects/Application__c/fields/Remarks_change_in_net_income__c.field-meta.xml
<CustomField>
    <fullName>Remarks_change_in_net_income__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>