force-app/main/default/objects/Application__c/fields/Remarks_for_change_in_collateral_value__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_change_in_collateral_value__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>