force-app/main/default/objects/Application__c/fields/Remarks_Topup__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Topup__c</fullName>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>