force-app/main/default/objects/Application__c/fields/Review_BM_Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Review_BM_Recommended_Amount__c</fullName>
    <label>Review BM Recommended Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>