force-app/main/default/objects/Application__c/fields/Risk_Document_Color__c.field-meta.xml
<CustomField>
    <fullName>Risk_Document_Color__c</fullName>
    <label>Risk Document Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>