force-app/main/default/objects/Application__c/fields/Sanction_Amount_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Amount_Restriction__c</fullName>
    <label>Sanction Amount Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>