force-app/main/default/objects/Application__c/fields/Sanction_amount_restriction_upto__c.field-meta.xml
<CustomField>
    <fullName>Sanction_amount_restriction_upto__c</fullName>
    <label>Sanction Amount Restriction Upto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>