force-app/main/default/objects/Application__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy Value 1</fullName>
            </value>
            <value>
                <fullName>Dummy Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>