force-app/main/default/objects/Application__c/fields/Source_Of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Source_Of_Loan__c</fullName>
    <label>Source Of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Additional Loan</fullName>
            </value>
            <value>
                <fullName>Other Referral</fullName>
            </value>
            <value>
                <fullName>Direct Marketing</fullName>
            </value>
            <value>
                <fullName>Light Board</fullName>
            </value>
            <value>
                <fullName>Flute Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>