force-app/main/default/objects/Application__c/fields/Sourcing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Branch</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>