force-app/main/default/objects/Application__c/fields/Sr_Num__c.field-meta.xml
<CustomField>
    <fullName>Sr_Num__c</fullName>
    <label>Sr No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>