force-app/main/default/objects/Application__c/fields/SRO_Office__c.field-meta.xml
<CustomField>
    <fullName>SRO_Office__c</fullName>
    <label>SRO Office</label>
    <length>30</length>
    <type>Text</type>
</CustomField>