force-app/main/default/objects/Application__c/fields/Staff_Loan__c.field-meta.xml
<CustomField>
    <fullName>Staff_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Loan</label>
    <type>Checkbox</type>
</CustomField>