force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
                <default>true</default>
                <label>Login</label>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>In Principle Sanction</fullName>
            </value>
            <value>
                <fullName>Lead Detail</fullName>
            </value>
            <value>
                <fullName>Process Credit</fullName>
            </value>
            <value>
                <fullName>Approval Credit</fullName>
            </value>
            <value>
                <fullName>Final Sanction</fullName>
            </value>
            <value>
                <fullName>Post Approval</fullName>
            </value>
            <value>
                <fullName>MOD Registration</fullName>
            </value>
            <value>
                <fullName>Agreement Execution</fullName>
            </value>
            <value>
                <fullName>Dispatch Pending</fullName>
            </value>
            <value>
                <fullName>Document Receipt</fullName>
            </value>
            <value>
                <fullName>Disbursal Maker</fullName>
            </value>
            <value>
                <fullName>Disbursal Author</fullName>
            </value>
            <value>
                <fullName>Document Deferral</fullName>
            </value>
            <value>
                <fullName>Custody</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
                <isActive>false</isActive>
                <label>DOS</label>
            </value>
            <value>
                <fullName>DOS Condition</fullName>
                <isActive>false</isActive>
                <label>DOS Condition</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <isActive>false</isActive>
                <label>PC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>