force-app/main/default/objects/Application__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Opinion</fullName>
            </value>
            <value>
                <fullName>Legal Approval</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>