force-app/main/default/objects/Application__c/fields/Take_Over__c.field-meta.xml
<CustomField>
    <fullName>Take_Over__c</fullName>
    <label>Take Over</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>