force-app/main/default/objects/Application__c/fields/Take_Over_Amount__c.field-meta.xml
<CustomField>
    <fullName>Take_Over_Amount__c</fullName>
    <label>Take Over Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>