force-app/main/default/objects/Application__c/fields/Tenure_Requested__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Requested__c</fullName>
    <label>Tenure Requested</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>