force-app/main/default/objects/Application__c/fields/Third_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Name__c</fullName>
    <label>Third Party Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>