force-app/main/default/objects/Application__c/fields/Title_Deed_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Number__c</fullName>
    <label>Title Deed Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>