force-app/main/default/objects/Application__c/fields/Total_amount_recommended__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_recommended__c</fullName>
    <label>Total amount recommended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>