force-app/main/default/objects/Application__c/fields/Total_Amount_Recommended_PcAc__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Recommended_PcAc__c</fullName>
    <formula>Amount_Recommended__c + CEILING(Insurance_Premium__c/10000)*10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Recommended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>