force-app/main/default/objects/Application__c/fields/Total_net_income_after_2nd_tranche__c.field-meta.xml
<CustomField>
    <fullName>Total_net_income_after_2nd_tranche__c</fullName>
    <label>Total net income after 2nd tranche(₹)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>