force-app/main/default/objects/Application__c/fields/Total_Net_income_for_Tranche_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_income_for_Tranche_2__c</fullName>
    <label>Total Net income for Tranche 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>