force-app/main/default/objects/Application__c/fields/Total_ROI__c.field-meta.xml
<CustomField>
    <fullName>Total_ROI__c</fullName>
    <label>Total ROI(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>