force-app/main/default/objects/Application__c/fields/Total_ROI_percent__c.field-meta.xml
<CustomField>
    <fullName>Total_ROI_percent__c</fullName>
    <formula>Customer_Communicated__c -  Margin_ROI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>