force-app/main/default/objects/Application__c/fields/Total_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Total_Tenor__c</fullName>
    <label>Total Tenor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>