force-app/main/default/objects/Application__c/fields/Total_Tranche_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Tranche_Income__c</fullName>
    <formula>Tranche_1__c + Tranche_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>