force-app/main/default/objects/Application__c/fields/Tranche_1__c.field-meta.xml
<CustomField>
    <fullName>Tranche_1__c</fullName>
    <label>Tranche 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>