force-app/main/default/objects/Application__c/fields/Tranche_Disbursal__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Disbursal__c</fullName>
    <label>Tranche Disbursal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>