force-app/main/default/objects/Application__c/fields/Transaction_DBR__c.field-meta.xml
<CustomField>
    <fullName>Transaction_DBR__c</fullName>
    <label>Transaction DBR(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>