force-app/main/default/objects/Application__c/fields/Transaction_LTV__c.field-meta.xml
<CustomField>
    <fullName>Transaction_LTV__c</fullName>
    <label>Transaction LTV(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>