force-app/main/default/objects/Application__c/fields/Type_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Purchase__c</fullName>
    <label>Type of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>