force-app/main/default/objects/Application__c/fields/Upload_date__c.field-meta.xml
<CustomField>
    <fullName>Upload_date__c</fullName>
    <label>Upload date</label>
    <type>Date</type>
</CustomField>